<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/queue_passenger_nav"
    app:startDestination="@id/queuePassengerFragment">

    <fragment
        android:id="@+id/queuePassengerFragment"
        android:name="id.bluebird.vsm.feature.home.main.FragmentQueuePassenger"
        android:label="@string/queue_passenger">
    </fragment>
    <fragment
        android:id="@+id/queueTicket"
        android:name="id.bluebird.vsm.feature.home.queue_ticket.FragmentQueueTicket"
        android:label="@string/queue_ticket_text">
    </fragment>
    <fragment
        android:id="@+id/searchFleetFragment"
        android:name="id.bluebird.vsm.feature.home.queue_search.FragmentQueueSearch"
        android:label="@string/label_queue_search" />
    <fragment
        android:id="@+id/ritaseFleetFragment"
        android:name="id.bluebird.vsm.feature.home.ritase_fleet.FragmentRitaseFleet"
        android:label="@string/select_no_fleet">
    </fragment>
    <fragment
        android:id="@+id/qrCodeFragment"
        android:name="id.bluebird.vsm.feature.home.qr_code.FragmentQrCode"
        android:label="@string/qr_code_title" />
    <deepLink app:uri="android-app://id.bluebird.mall/queue_passenger" />
</navigation>