<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>

        <variable
            name="isLoading"
            type="boolean" />

        <variable
            name="isError"
            type="boolean" />

        <variable
            name="vm"
            type="id.bluebird.vsm.feature.home.qr_code.QrCodeViewModel" />

        <import type="android.view.View" />
    </data>


    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="120dp"
            android:visibility="@{isLoading ? View.VISIBLE : View.GONE}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tabLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="@{!isLoading ? View.VISIBLE : View.GONE}"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tabTextAppearance="@style/TabLayoutTextStyle"
            tools:theme="@style/Theme.MaterialComponents">

            <com.google.android.material.tabs.TabItem
                android:id="@+id/driver_tab"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/driver_app_text" />

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/web_passenger_text" />
        </com.google.android.material.tabs.TabLayout>

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="65dp"
            android:padding="10dp"
            android:visibility="@{!isLoading ? View.VISIBLE : View.GONE}"
            app:cardElevation="2dp"
            app:cardPreventCornerOverlap="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.MaterialCardView.Cut">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/image_qr_page"
                    android:layout_width="256dp"
                    android:layout_height="256dp"
                    android:layout_gravity="center" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:visibility="@{isError ? View.GONE : View.VISIBLE, default=gone}"
                    android:weightSum="2">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:paddingHorizontal="24dp"
                        android:text="@string/location_id"
                        android:textColor="@color/primary_color"
                        android:textStyle="bold" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/id_location_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="right"
                        android:paddingHorizontal="24dp"
                        android:textAlignment="gravity"
                        android:textColor="@color/primary_color"
                        android:textStyle="bold" />

                </LinearLayout>

                <View
                    android:layout_width="8dp"
                    android:layout_height="8dp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:visibility="@{isError ? View.GONE : View.VISIBLE, default=gone}"
                    android:weightSum="2">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:paddingHorizontal="24dp"
                        android:text="@string/sub_location_id"
                        android:textColor="@color/primary_color"
                        android:textStyle="bold" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/id_sub_location_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="right"
                        android:paddingHorizontal="24dp"
                        android:textAlignment="gravity"
                        android:textColor="@color/primary_color"
                        android:textStyle="bold" />

                </LinearLayout>

                <View
                    android:layout_width="8dp"
                    android:layout_height="8dp" />


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:visibility="@{isError ? View.VISIBLE : View.GONE, default=gone}"
                    android:weightSum="2">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/error_qr_code_message"
                        android:textColor="@android:color/black"
                        android:textStyle="bold" />

                    <View
                        android:layout_width="8dp"
                        android:layout_height="8dp" />

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/reload_qr_code"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="10dp"
                        android:backgroundTint="@color/primary_color"
                        android:text="@string/recall_qr_code"
                        android:textColor="@color/white" />
                </LinearLayout>

            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>