<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="statusView"
            type="int" />
        <variable
            name="vm"
            type="id.bluebird.mall.home.queue_search.QueueSearchViewModel" />
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/search_page"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12sp"
            android:background="@drawable/bg_stock_request"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingTop="16dp"
            android:paddingBottom="16dp"
            android:layout_marginHorizontal="16dp"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.AppCompatEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="7"
                android:background="@null"
                android:afterTextChanged="@{(c) -> vm.filter()}"
                android:drawableStart="@drawable/ic_search"
                android:drawablePadding="16dp"
                android:fontFamily="@font/ubuntu_regular"
                android:hint="@string/hint_queue_search"
                android:imeOptions="actionDone"
                android:inputType="textCapCharacters"
                android:lines="1"
                android:maxLength="7"
                android:maxLines="1"
                android:paddingStart="8dp"
                android:text="@={vm.params}"
                android:textSize="16sp" />

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1.5"
                android:src="@drawable/ic_cross"
                android:visibility="gone" />

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/search_page"
            android:fillViewport="true">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="120dp"
                    android:gravity="center_horizontal"
                    android:textSize="18dp"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    bindVisibility="@{statusView == 1 ? true : false}"
                    android:text="@string/search_queue_message"/>

                <ProgressBar
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    bindVisibility="@{statusView == 2 ? true : false}"
                    android:layout_marginTop="120dp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="120dp"
                    android:gravity="center_horizontal"
                    bindVisibility="@{statusView == 3 ? true : false}"
                    android:text="@string/search_no_queue"/>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recyclerViewQueue"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    bindVisibility="@{statusView == 0 ? true : false}"
                    android:scrollbars="none"
                    android:layout_marginTop="20dp"/>

            </androidx.appcompat.widget.LinearLayoutCompat>

        </androidx.core.widget.NestedScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>