<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <import type="android.view.View" />

        <variable
            name="statusView"
            type="int" />

        <variable
            name="statusEdit"
            type="boolean" />

        <variable
            name="vm"
            type="id.bluebird.vsm.feature.home.ritase_fleet.RitaseFleetViewModel" />
    </data>

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/swipeRefreshLayout"
        android:layout_height="match_parent"
        android:layout_width="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/search_page"
                bindVisibility="@{statusEdit ? true : false}"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="12sp"
                android:background="@drawable/bg_stock_request"
                android:gravity="center"
                android:orientation="horizontal"
                android:paddingTop="16dp"
                android:paddingBottom="16dp"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/search_form"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="7"
                    android:background="@null"
                    android:drawableStart="@drawable/ic_search"
                    android:drawablePadding="16dp"
                    android:fontFamily="@font/ubuntu_regular"
                    android:hint="@string/search_no_fleet"
                    android:imeOptions="actionDone"
                    android:inputType="textCapCharacters"
                    android:lines="1"
                    android:maxLength="7"
                    android:maxLines="1"
                    android:paddingStart="8dp"
                    android:text="@={vm.params}"
                    android:textSize="16sp" />

            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.core.widget.NestedScrollView
                android:id="@+id/scroll_page"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fillViewport="true"
                android:paddingBottom="160dp"
                app:layout_constraintTop_toBottomOf="@+id/search_page">

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingStart="16dp"
                    android:paddingEnd="16dp">

                    <ProgressBar
                        bindVisibility="@{statusView == 1 ? true : false}"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal|center_vertical"
                        android:layout_marginTop="120dp" />

                    <TextView
                        bindVisibility="@{statusView == 2 ? true : false}"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="120dp"
                        android:gravity="center_horizontal"
                        android:text="@string/fleet_not_found" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/rcv_select_fleet"
                        bindVisibility="@{statusView == 0 ? true : false}"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"/>

                </androidx.appcompat.widget.LinearLayoutCompat>

            </androidx.core.widget.NestedScrollView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="1"
                android:padding="24dp"
                android:layout_marginBottom="6dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btnSaveFleet"
                    style="@style/BackgroundCancel"
                    android:layout_marginLeft="5dp"
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/save_text"
                    android:textAllCaps="false"
                    android:textColor="@color/primary_0" />

            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
</layout>